# rob456

devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: learning_tf.pc  nav_bundle.pc  rob456_hw2.pc  rob456_hw3.pc  rob456_labs.pc  rob456_project.pc  robot_setup_tf.pc  simple_navigation_goals.pc  stagebot_2dnav.pc
devel/lib/simple_navigation_goals/: base_link_navigation_client  map_navigation_client
devel/share/learning_tf/cmake/: learning_tfConfig.cmake
devel/share/nav_bundle/cmake/: nav_bundleConfig.cmake
devel/share/rob456_hw2/cmake/: rob456_hw2Config.cmake
devel/share/rob456_hw3/cmake/: rob456_hw3Config.cmake
devel/share/rob456_labs/cmake/: rob456_labsConfig.cmake
devel/share/rob456_project/cmake/: rob456_projectConfig.cmake
devel/share/robot_setup_tf/cmake/: robot_setup_tfConfig.cmake
devel/share/simple_navigation_goals/cmake/: simple_navigation_goalsConfig.cmake
src/nav_bundle/: CMakeLists.txt
src/nav_bundle/launch/: nav_bundle.launch
src/rob456_hw2/: CMakeLists.txt
src/rob456_hw2/launch/: hw2.launch
src/rob456_hw2/nodes/: tf_broadcaster.py
src/rob456_hw2/src/: hw2.py  hw2back.py  hw2bak.py  hw2bak2.py  hw2current.py
src/rob456_hw3/: classsetup.rviz
src/rob456_hw3/launch/: hw3.launch
src/rob456_labs/: CMakeLists.txt
src/rob456_labs/launch/: robot_control.launch  stage_rviz.launch
src/rob456_labs/src/: robot_control.py
src/rob456_project/: package.xml
src/rob456_project/launch/: rob456_project.launch
src/rob456_project/src/: move_in_square.py  runfile
(+1 files in other folders)
